config/manager/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: bdkit-backend
  labels:
    app.kubernetes.io/name: bdkit-backend
spec:
  selector:
    app.kubernetes.io/name: bdkit-backend
  ports:
  - name: backend
    port: 8081
  type: Cluster
